@@ -12,7 +12,9 @@ Fixed - indicates a bug fix
 
 September 2008 - FreeRapid Downloader 0.6 released
   Fixed : remove selected does not select next line in the table (if filter was applied)
-  Fixed : partly downloaded files were not deleted in some special cases
+  Fixed : partly downloaded files were not deleted at some special cases
+  Changed : SwingX library upgraded to version 0.94
+  Changed : property "Max downloads at a time" does not require a restart anymore
   Added : clipboard monitoring (optionable)
   Added : frame title information (optionable)
   Added : ESC key cancels current download(s)
